# quiz_app

./: .gitignore
backend/: main.py  piccolo_conf.py  pyproject.toml  settings.py
backend/users/: controllers.py  middleware.py  piccolo_app.py  schema.py  security.py  tables.py
backend/users/piccolo_migrations/: users_2026_05_25t14_45_39_411764.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: JoinNavbar.tsx  MobileSidebarDrawer.tsx  QuestionCard.tsx  Sidebar.tsx
frontend/src/components/modals/: QuizDetailsModal.tsx
frontend/src/components/ui/: Button.tsx  Field.tsx  Form.tsx  ProgressBar.tsx  TextField.tsx  utils.ts
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: AddQuestion.tsx  AdminPage.tsx  HomePage.tsx  JoinPage.tsx  LibraryPage.tsx  QuizDetailPage.tsx  SessionPage.tsx
frontend/src/types/: user.ts
frontend/src/utils/: cookies.ts
