[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=48.0.0",
    "litestar>=2.22.0",
    "piccolo[postgres,sqlite]>=1.34.0",
    "pyjwt[crypto]>=2.13.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.48.0",
]
